:dart: Make test for GCC and Clang

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,7 +35,7 @@ link_libraries(${TBB_LIBRARIES})
 # Boost FileSystem
 find_package(Boost REQUIRED COMPONENTS system serialization)
 include_directories(${BOOST_INCLUDE_DIRS})
-link_libraries(${Boost_SERIALIZATION_LIBRARY} ${Boost_SYSTEM_LIBRARY})
+link_libraries(${Boost_SYSTEM_LIBRARY} ${Boost_SERIALIZATION_LIBRARY})
 
 # Include directories
 include_directories(
