--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ jobs:
       - image: quay.io/cbgeo/mpm
     steps:
       - checkout
-      # GCC 6.3
+      # GCC 7
       - run:
           name: GCC-7 build
           command: |
@@ -14,9 +14,9 @@ jobs:
             [ "$(ls -A build)" ] && rm -rf build/*
             cd build
             cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_CXX_COMPILER=g++ -DCMAKE_EXPORT_COMPILE_COMMANDS=On ..
-            make -j8 
+            make -j8 mpmtest
             ctest -VV
-      # Clang 3.9
+      # Clang 4.0
       - run:
           name: Clang-4.0 build
           command: |
@@ -24,7 +24,7 @@ jobs:
             [ "$(ls -A build)" ] && rm -rf build/*
             cd build
             cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_CXX_COMPILER=clang++ -DCMAKE_EXPORT_COMPILE_COMMANDS=On ..
-            make -j8 
+            make -j8 mpmtest
             ctest -VV
       # cppcheck
       - run:
@@ -40,7 +40,7 @@ jobs:
             [ "$(ls -A build)" ] && rm -rf build/*
             cd build
             cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_CXX_COMPILER=g++ -DCMAKE_EXPORT_COMPILE_COMMANDS=On -DENABLE_COVERAGE=On ..
-            make -j8
+            make -j8 mpmtest
             ctest -VV
             make gcov
             make lcov
